# murk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  book.toml  codecov.yml  deny.toml  justfile  proptest.toml  release-plz.toml
.beads/: issues.jsonl
.codex/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  docs.yml  release-plz.yml  release.yml  stress.yml
book/src/: SUMMARY.md  api-reference.md  architecture.md  concepts.md  determinism.md  error-reference.md  examples.md  getting-started.md  introduction.md  replay-format.md  troubleshooting.md
crates/murk/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-arena/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-arena/src/: config.rs  descriptor.rs  error.rs  handle.rs  lib.rs  pingpong.rs  raw.rs  read.rs  scratch.rs  segment.rs  sparse.rs  static_arena.rs  write.rs
crates/murk-bench/: Cargo.toml
crates/murk-bench/benches/: arena_ops.rs  codec_ops.rs  obs_ops.rs  placeholder.rs  reference_profile.rs  space_ops.rs
crates/murk-bench/examples/: lockstep_rl.rs
crates/murk-bench/src/: lib.rs
crates/murk-core/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-core/src/: command.rs  error.rs  field.rs  id.rs  lib.rs  traits.rs
crates/murk-engine/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
crates/murk-engine/examples/: quickstart.rs  realtime_async.rs  replay.rs
crates/murk-engine/src/: batched.rs  config.rs  egress.rs  epoch.rs  ingress.rs  lib.rs  lockstep.rs  metrics.rs  overlay.rs  realtime.rs  ring.rs  tick.rs  tick_thread.rs
crates/murk-engine/tests/: arena_fragmentation.rs  nan_detection.rs  stress_death_spiral.rs  stress_mass_invalidation.rs  stress_rejection_oscillation.rs
crates/murk-ffi/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
crates/murk-ffi/include/: murk.h
crates/murk-ffi/src/: batched.rs  command.rs  config.rs  handle.rs  lib.rs  metrics.rs  obs.rs  propagator.rs  status.rs  types.rs  world.rs
crates/murk-obs/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-obs/src/: cache.rs  flatbuf.rs  geometry.rs  lib.rs  metadata.rs  plan.rs  pool.rs  spec.rs
crates/murk-propagator/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-propagator/src/: context.rs  guard.rs  lib.rs  pipeline.rs  propagator.rs  scratch.rs
crates/murk-propagators/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-propagators/src/: agent_emission.rs  agent_movement.rs  diffusion.rs  fields.rs  flow_field.rs  gradient_compute.rs  grid_helpers.rs  identity_copy.rs  lib.rs  morphological_op.rs  noise_injection.rs  resource_field.rs  reward.rs  scalar_diffusion.rs  wave_propagation.rs
crates/murk-propagators/tests/: integration.rs  library_integration.rs  p4_integration.rs
crates/murk-python/: Cargo.toml  README.md  pyproject.toml
crates/murk-python/python/murk/: __init__.py  _murk.pyi  batched_vec_env.py  env.py  vec_env.py
crates/murk-python/src/: batched.rs  command.rs  config.rs  error.rs  lib.rs  library_propagators.rs  metrics.rs  obs.rs  propagator.rs  world.rs
crates/murk-python/tests/: conftest.py  test_batched_vec_env.py  test_config.py  test_gil_release.py  test_gymnasium.py  test_obs.py  test_ppo_smoke.py  test_propagator.py  test_vec_env.py  test_world.py
crates/murk-replay/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-replay/src/: codec.rs  compare.rs  error.rs  hash.rs  lib.rs  reader.rs  types.rs  writer.rs
crates/murk-replay/tests/: determinism.rs
crates/murk-space/: CHANGELOG.md  Cargo.toml  README.md
crates/murk-space/src/: compliance.rs  edge.rs  error.rs  fcc12.rs  grid2d.rs  hex2d.rs  lib.rs  line1d.rs  product.rs  region.rs  ring1d.rs  space.rs  square4.rs  square8.rs
crates/murk-space/tests/: max_neighbour_degree_and_rank_slice.rs
crates/murk-test-utils/: Cargo.toml
crates/murk-test-utils/src/: fixtures.rs  lib.rs
crates/murk/src/: lib.rs
docs/: ARCHITECTURE.md  CONCEPTS.md  DESIGN-DECISIONS-v3.1.md  DESIGN.md  HLD.md  IMPLEMENTATION-PLAN-REVIEW.md  IMPLEMENTATION-PLAN.md  determinism-catalogue.md  error-reference.md  replay-format.md
docs/arch-analysis-2026-02-22-1219/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  05-architecture-assessment.md  06-technical-debt-catalog.md  09-improvement-roadmap.md
docs/bugs/: BUG_TEMPLATE.md  INDEX.md  arena-TRIAGE-SUMMARY.md  arena-begin-tick-reentry-sparse-corruption.md  arena-missing-segment-size-validation.md  arena-placeholder-pertick-handles-in-snapshot.md  arena-segment-slice-beyond-cursor.md  arena-sparse-cow-generation-rollover.md  arena-sparse-segment-memory-leak.md  arena-static-arena-duplicate-field-ids.md  core-fieldtype-zero-dims-constructible.md  engine-adaptive-backoff-output-unused.md  engine-backoff-config-not-validated.md  engine-batched-obsspec-missing-field-atomicity.md  engine-overlay-empty-buffer-conflation.md  engine-stepresult-receipts-doc-mismatch.md  example-warmup-ticks-shorten-episode-length.md  ffi-accessor-ambiguous-zero-return.md  ffi-config-edge-behavior-unchecked-f64-cast.md  ffi-config-not-consumed-on-null.md  ffi-handle-generation-wraparound.md  obs-flatbuf-empty-coords-roundtrip-failure.md  obs-geometry-graph-distance-hex-panic-short-input.md  propagator-agent-movement-tick0-actions.md  propagator-reward-stale-heat-gradient-dependency.md  propagator-scratch-bytes-slots-mismatch.md  propagator-validate-pipeline-multi-call.md  propagators-agent-emission-additive-copy-before-length-check.md  propagators-agent-movement-respawn-on-all-zero.md  propagators-diffusion-generic-gradient-periodic-sign.md  propagators-nan-infinity-validation-gaps.md  python-close-skips-obsplan-destroy.md  python-metrics-race-between-step-and-propagator-query.md  (+8 more)
scripts/: check_install_docs_consistency.py  check_replay_format_version.py  codex_bug_hunt.py  codex_bug_hunt_simple.py
(+144 files in other folders)
