[workspace]
resolver = "2"
members = [
    "crates/murk-core",
    "crates/murk-arena",
    "crates/murk-space",
    "crates/murk-propagator",
    "crates/murk-obs",
    "crates/murk-engine",
    "crates/murk-replay",
    "crates/murk-ffi",
    "crates/murk-python",
    "crates/murk-test-utils",
    "crates/murk-propagators",
    "crates/murk-bench",
]

[workspace.dependencies]
crossbeam-channel = "0.5"
indexmap = "2"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
smallvec = "1"
