[workspace]
resolver = "2"
members = [
    "crates/murk-core",
    "crates/murk-arena",
    "crates/murk-space",
    "crates/murk-propagator",
    "crates/murk-obs",
    "crates/murk-engine",
    "crates/murk-replay",
    "crates/murk-ffi",
    "crates/murk-python",
    "crates/murk-test-utils",
    "crates/murk-propagators",
    "crates/murk-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tachyon-beep/murk"
authors = ["John Morrissey"]

[workspace.dependencies]
crossbeam-channel = "0.5"
indexmap = "2"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
smallvec = "1"
