[workspace]
resolver = "2"
members = [
    "crates/murk",
    "crates/murk-core",
    "crates/murk-arena",
    "crates/murk-space",
    "crates/murk-propagator",
    "crates/murk-obs",
    "crates/murk-engine",
    "crates/murk-replay",
    "crates/murk-ffi",
    "crates/murk-python",
    "crates/murk-test-utils",
    "crates/murk-propagators",
    "crates/murk-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tachyon-beep/murk"
authors = ["John Morrissey"]
homepage = "https://github.com/tachyon-beep/murk"
documentation = "https://tachyon-beep.github.io/murk/"
keywords = ["simulation", "reinforcement", "arena", "gymnasium", "gamedev"]
categories = ["simulation", "science", "game-development"]
rust-version = "1.87"

[workspace.dependencies]
crossbeam-channel = "0.5"
indexmap = "2"
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }
smallvec = "1"
