[package]
name = "murk-arena"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Arena-based generational allocation for Murk simulations"

[dependencies]
murk-core = { path = "../murk-core" }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
