[package]
name = "murk-arena"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Arena-based generational allocation for Murk simulations"
readme = "README.md"

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.3" }
indexmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
