[package]
name = "murk-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Benchmarks for the Murk simulation framework"

[dependencies]
murk-core = { path = "../murk-core" }
murk-engine = { path = "../murk-engine" }
murk-propagators = { path = "../murk-propagators" }
murk-space = { path = "../murk-space" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "reference_profile"
harness = false

[[example]]
name = "lockstep_rl"
