[package]
name = "murk-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Benchmarks for the Murk simulation framework"
publish = false

[dependencies]
murk-core = { path = "../murk-core" }
murk-engine = { path = "../murk-engine" }
murk-propagators = { path = "../murk-propagators" }
murk-space = { path = "../murk-space" }

[dev-dependencies]
criterion = { workspace = true }
murk-arena = { path = "../murk-arena" }
murk-obs = { path = "../murk-obs" }
murk-replay = { path = "../murk-replay" }
murk-test-utils = { path = "../murk-test-utils" }
smallvec = { workspace = true }

[[bench]]
name = "reference_profile"
harness = false

[[bench]]
name = "arena_ops"
harness = false

[[bench]]
name = "space_ops"
harness = false

[[bench]]
name = "obs_ops"
harness = false

[[bench]]
name = "codec_ops"
harness = false

[[example]]
name = "lockstep_rl"
