[package]
name = "murk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types and traits for the Murk simulation framework"

[dependencies]
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
