[package]
name = "murk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core types and traits for the Murk simulation framework"

[dependencies]
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
