[package]
name = "murk-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Simulation engine orchestrating Murk environments"

[dependencies]
murk-core = { path = "../murk-core" }
murk-arena = { path = "../murk-arena" }
murk-space = { path = "../murk-space" }
murk-propagator = { path = "../murk-propagator" }
murk-obs = { path = "../murk-obs" }
crossbeam-channel = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
proptest = { workspace = true }
smallvec = { workspace = true }
