[package]
name = "murk-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Simulation engine orchestrating Murk environments"
readme = "README.md"

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.2" }
murk-arena = { path = "../murk-arena", version = "0.1.2" }
murk-space = { path = "../murk-space", version = "0.1.2" }
murk-propagator = { path = "../murk-propagator", version = "0.1.2" }
murk-obs = { path = "../murk-obs", version = "0.1.2" }
crossbeam-channel = { workspace = true }
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
murk-bench = { path = "../murk-bench" }
murk-propagators = { path = "../murk-propagators" }
murk-replay = { path = "../murk-replay" }
proptest = { workspace = true }
smallvec = { workspace = true }
