[package]
name = "murk-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "C FFI bindings for the Murk simulation framework"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.7" }
murk-engine = { path = "../murk-engine", version = "0.1.7" }
murk-obs = { path = "../murk-obs", version = "0.1.7" }
murk-space = { path = "../murk-space", version = "0.1.7" }
murk-propagator = { path = "../murk-propagator", version = "0.1.7" }
smallvec = { workspace = true }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
proptest = { workspace = true }
