[package]
name = "murk-propagator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Propagator trait and step context for Murk simulations"

[dependencies]
murk-core = { path = "../murk-core" }
murk-space = { path = "../murk-space" }
indexmap = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
proptest = { workspace = true }
