[package]
name = "murk-propagator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Propagator trait and step context for Murk simulations"
readme = "README.md"

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.0" }
murk-space = { path = "../murk-space", version = "0.1.0" }
indexmap = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
proptest = { workspace = true }
