[package]
name = "murk-propagators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Reference propagators for the Murk simulation framework"

[dependencies]
murk-core = { path = "../murk-core" }
murk-propagator = { path = "../murk-propagator" }
murk-space = { path = "../murk-space" }
smallvec = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
murk-engine = { path = "../murk-engine" }
