[package]
name = "murk-propagators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Reference propagators for the Murk simulation framework"
readme = "README.md"

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.0" }
murk-propagator = { path = "../murk-propagator", version = "0.1.0" }
murk-space = { path = "../murk-space", version = "0.1.0" }
smallvec = { workspace = true }

[dev-dependencies]
murk-test-utils = { path = "../murk-test-utils" }
murk-engine = { path = "../murk-engine", version = "0.1.0" }
