[package]
name = "murk-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python bindings for the Murk simulation framework (PyO3)"
publish = false

[lib]
name = "_murk"
crate-type = ["cdylib"]

[dependencies]
murk-ffi = { path = "../murk-ffi" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
numpy = "0.28"
