[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "murk"
version = "0.1.0"
description = "Python bindings for the Murk simulation framework"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "stable-baselines3>=2.0",
]

[tool.maturin]
python-source = "python"
module-name = "murk._murk"
features = ["pyo3/extension-module"]
