[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "murk"
dynamic = ["version"]
description = "Python bindings for the Murk simulation framework"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "John Morrissey"}]
readme = "../../README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "stable-baselines3>=2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tachyon-beep/murk"
Documentation = "https://tachyon-beep.github.io/murk/"
Repository = "https://github.com/tachyon-beep/murk"
Issues = "https://github.com/tachyon-beep/murk/issues"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default in CI)",
]

[tool.maturin]
python-source = "python"
module-name = "murk._murk"
features = ["pyo3/extension-module"]
