[package]
name = "murk-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Deterministic replay and action logging for Murk simulations"
readme = "README.md"

[dependencies]
murk-core = { path = "../murk-core", version = "0.1.0" }
indexmap = { workspace = true }

[dev-dependencies]
murk-engine = { path = "../murk-engine", version = "0.1.0" }
murk-space = { path = "../murk-space", version = "0.1.0" }
murk-propagator = { path = "../murk-propagator", version = "0.1.0" }
murk-propagators = { path = "../murk-propagators", version = "0.1.0" }
murk-test-utils = { path = "../murk-test-utils" }
murk-bench = { path = "../murk-bench" }
proptest = { workspace = true }
