[package]
name = "murk-space"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Spatial data structures and field storage for Murk simulations"

[dependencies]
murk-core = { path = "../murk-core" }
indexmap = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
