[package]
name = "murk-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Test utilities and mock types for Murk development"

[dependencies]
murk-core = { path = "../murk-core" }
murk-propagator = { path = "../murk-propagator" }
murk-space = { path = "../murk-space" }
